# quarto-automation

./: .gitignore  Dockerfile  Makefile  README.md  _quarto.yml  docker-compose.yml  pyproject.toml  report.qmd  run.ps1  run.sh
scripts/: fetch_data.py
